# MealPlanner

./: CMakeLists.txt  package.json  server.cpp  server.js
public/: index.html  script.js  styles.css
